# src/features/ticket/entities/enums/ticket-priority.enum.ts
@@ -1,0 +1,8 @@
+enum TicketPriority {
+	Baixa = 'baixa',
+	Media = 'media',
+	Alta = 'alta',
+	Urgente = 'urgente',
+}
+
+export default TicketPriority;
